--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -53,4 +53,11 @@ footer{
             }
         }
     }
+    .copy{
+        h3{
+            font-size: 15px;
+            font-style: italic;
+            text-align: center;
+        }
+    }
 }
