--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -432,6 +432,7 @@ main{
                 height: 400px;
                 border-radius: 20px;
                 transition: all 0.6s;
+                padding-bottom: 20px;
                 box-shadow: 1px 4px 6px 5px rgb(179, 179, 179);
                 &:hover{
                     transform: scale(1.05,1.05);
@@ -447,6 +448,7 @@ main{
                 height: 400px;
                 border-radius: 20px;
                 transition: all 0.6s;
+                padding-bottom: 200px;
                 box-shadow: 1px 4px 6px 5px rgb(179, 179, 179);
                 &:hover{
                     transform: scale(1.05,1.05);
@@ -605,7 +607,6 @@ main{
         
         .nosotros{
             background-color: black;
-            /* padding: 80px; */
             padding: 50px 40px 50px 40px;
             h2{
                 
@@ -863,11 +864,17 @@ main{
     }
     .main .card-deck .galeria1{
         margin: 10px;
+        padding-bottom: 20px;
+        border: 0px;
     }
     .main .card-deck .galeria2{
+        padding-bottom: 20px;
+        border: 0px;
         margin: 10px;
     }
     .main .card-deck .galeria3{
+        padding-bottom: 20px;
+        border: 0px;
         margin: 10px;
     }
     .main .card-deck .galeria4{
@@ -924,6 +931,7 @@ main{
 @media only screen and (max-width: 630px){
     main .carrusel_home .slide img{
         height: 200px;
+        padding: 10px;
     }
     main .carrusel_home .slide h3{
         font-size: 1rem;
@@ -1027,6 +1035,9 @@ main{
     }
     main .info-main .envio-pago .jumbotron .foto-pago{
         height: 400px;
+    }
+    .main .carrusel_productos .slide{
+    box-shadow: 0px 0px 0px 0px rgb(255, 255, 255);
     }
     .main .carrusel_productos .slide img{
         height: 180px;
