--- a/scss/style.css
+++ b/scss/style.css
@@ -688,6 +688,7 @@ main .info-main .envio-pago .jumbotron p {
   border-radius: 20px;
   -webkit-transition: all 0.6s;
   transition: all 0.6s;
+  padding-bottom: 20px;
   -webkit-box-shadow: 1px 4px 6px 5px #b3b3b3;
           box-shadow: 1px 4px 6px 5px #b3b3b3;
 }
@@ -709,6 +710,7 @@ main .info-main .envio-pago .jumbotron p {
   border-radius: 20px;
   -webkit-transition: all 0.6s;
   transition: all 0.6s;
+  padding-bottom: 200px;
   -webkit-box-shadow: 1px 4px 6px 5px #b3b3b3;
           box-shadow: 1px 4px 6px 5px #b3b3b3;
 }
@@ -925,7 +927,6 @@ main .info-main .envio-pago .jumbotron p {
 
 .main .nosotros1 .nosotros {
   background-color: black;
-  /* padding: 80px; */
   padding: 50px 40px 50px 40px;
 }
 
@@ -1251,11 +1252,17 @@ main .info-main .envio-pago .jumbotron p {
   }
   .main .card-deck .galeria1 {
     margin: 10px;
+    padding-bottom: 20px;
+    border: 0px;
   }
   .main .card-deck .galeria2 {
+    padding-bottom: 20px;
+    border: 0px;
     margin: 10px;
   }
   .main .card-deck .galeria3 {
+    padding-bottom: 20px;
+    border: 0px;
     margin: 10px;
   }
   .main .card-deck .galeria4 {
@@ -1319,6 +1326,7 @@ main .info-main .envio-pago .jumbotron p {
 @media only screen and (max-width: 630px) {
   main .carrusel_home .slide img {
     height: 200px;
+    padding: 10px;
   }
   main .carrusel_home .slide h3 {
     font-size: 1rem;
@@ -1430,6 +1438,10 @@ main .info-main .envio-pago .jumbotron p {
   }
   main .info-main .envio-pago .jumbotron .foto-pago {
     height: 400px;
+  }
+  .main .carrusel_productos .slide {
+    -webkit-box-shadow: 0px 0px 0px 0px white;
+            box-shadow: 0px 0px 0px 0px white;
   }
   .main .carrusel_productos .slide img {
     height: 180px;
